--- a/scss/modules/index.scss
+++ b/scss/modules/index.scss
@@ -1,5 +1,8 @@
 @import 'global';
+@import 'loading-screen';
 @import 'nav';
 @import 'wrapper';
+@import 'logo';
 @import 'page';
+@import 'section';
 @import 'footer';
