--- a/scss/utils/type.scss
+++ b/scss/utils/type.scss
@@ -1,9 +1,8 @@
-//$fontStack: 'Karla', sans-serif;
-$fontStack: 'Lato', sans-serif;
+$fontStack: 'Karla', sans-serif;
 $fontStackSerif: 'Playfair Display', sans-serif;
 $fontSize: 17px;
 $fontSizeSmall: 12px;
 $fontSizeLarge: 20px;
 $fontSizeHuge: 40px;
 $lineHeight: 1.2;
-$letterSpacing: 1px;
+$letterSpacing: 1.25px;
