--- a/scss/modules/index.scss
+++ b/scss/modules/index.scss
@@ -2,6 +2,7 @@
 @import 'loading-screen';
 @import 'nav';
 @import 'wrapper';
+@import 'gallery';
 @import 'logo';
 @import 'page';
 @import 'section';
