--- a/scss/modules/nav.scss
+++ b/scss/modules/nav.scss
@@ -1,10 +1,13 @@
 .nav {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: $heightNav;
   font-family: $fontStackSerif;
   user-select: none;
   z-index: $indexNav;
+  pointer-events: all;
 
   .nav__inner {
     position: absolute;
@@ -13,9 +16,8 @@
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: flex-end;//center;
+    justify-content: flex-end;
     align-items: flex-end;
-    transition: transform $transitionMedium;
     @include padding(4, 0);
 
     .nav__item {
@@ -29,22 +31,6 @@
         color: $colourLink;
         border-color: $colourLink;
       }
-    }
-  }
-
-  #nav-gallery {
-    transform: translateX(-100%);
-
-    &.active {
-      transform: translateX(0);
-    }
-  }
-
-  #nav-content {
-    transform: translateX(100%);
-
-    &.active {
-      transform: translateX(0);
     }
   }
 }
