--- a/scss/modules/wrapper.scss
+++ b/scss/modules/wrapper.scss
@@ -5,6 +5,12 @@
   min-height: 100vh;
   padding-top: $heightNav;
   z-index: $indexWrapper;
-  position: relative;
   pointer-events: none;
+  position: relative;
+  transform: translateX(100vw);
+  transition: transform $transitionMedium;
+
+  &.active {
+    transform: translateX(0);
+  }
 }
