style updates & rendering

--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -26,7 +26,7 @@ body {
 	overflow-x: hidden;
 	touch-action: none;
 	user-select: none;
-	background: $backgroundGradient;
+	background: $backgroundColour;
 }
 
 .admin-notify {
