--- a/scss/modules/footer.scss
+++ b/scss/modules/footer.scss
@@ -1,12 +1,16 @@
 .footer {
   height: $heightFooter;
-  //background: linear-gradient(to right, $white, rgba(red, 0.125));
+  //background: $white;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;// center;
 
   .footer__inner {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
+    @include padding(4, 2);
 
     .footer__social-media {
       width: 100%;
@@ -29,16 +33,23 @@
             color: $black;
             text-decoration: none;
           }
+
+          &:hover {
+            border-color: $colourLink;
+
+            a {
+              color: $colourLink;
+            }
+          }
         }
       }
     }
 
     .footer__newsletter {
-      width: 100%;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      @include padding(0, 2);
+      align-items: flex-end;
+      @include padding(2, 2);
 
       .footer__newsletter-title {
         text-transform: uppercase;
