config sizing, style, bugfixes, archive

--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -17,6 +17,8 @@
     .canvas-wrapper {
       // NOTE: #canvas-target
       .canvas-wrapper__inner {
+        cursor: crosshair;
+
         &.clickable {
           cursor: pointer;
         }
