--- a/scss/utils/vars.scss
+++ b/scss/utils/vars.scss
@@ -2,8 +2,8 @@
 $black: #3f3f3f;
 $white: #fff;
 $colour: $black;
-$colourLink: #ff6f61;
-$backgroundColour: #eee;
+$colourLink: #ff6f61; //#40c1ac;
+$backgroundColour: #eee; //#e8e5e4;
 $backgroundGradient: linear-gradient(to top, $white, $backgroundColour);
 
 // size
