--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -7,7 +7,10 @@
   display: flex;
   align-items: center;
   transform: translateX(-100vw);
-  transition: transform $transitionMedium;
+
+  &.transition {
+    transition: transform $transitionMedium;
+  }
 
   &.active {
     transform: translateX(0);
@@ -18,15 +21,31 @@
       // NOTE: #canvas-target
       .canvas-wrapper__inner {
         cursor: crosshair;
+        background: #111;
+        box-sizing: content-box;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-        &.clickable {
-          cursor: pointer;
-        }
         canvas {
           position: absolute;
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+          box-sizing: content-box;
+          opacity: 0;
+          transition: opacity $transitionSlow;
+        }
+
+        &.clickable {
+          cursor: pointer;
+        }
+
+        &.active {
+          canvas {
+            opacity: 1;
+          }
         }
       }
     }
@@ -141,7 +160,7 @@
 
       .control {
         cursor: pointer;
-        @include padding(1, 0.5);
+        @include padding(1, 1);
 
         svg {
           transition: $transitionFast;
@@ -150,7 +169,7 @@
 
         &.active {
           svg {
-            transform: scale(1.2, 1.2);
+            transform: scale(1.25, 1.25);
             fill: $colourLink;
           }
         }
