--- a/scss/modules/page.scss
+++ b/scss/modules/page.scss
@@ -5,25 +5,13 @@
   @include margin(0, 2);
   @include padding(4, 0);
 
-  .page__header {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    @include padding(2, 0);
-    width: $widthPage;
-
-    display: none;
-
-    .page__title {
-      @include padding(2, 1);
-      margin-top: $space;
-      margin-bottom: 0;
-      display: inline-block;
-      text-transform: uppercase;
-      font-size: $fontSizeSmall;
-      color: $backgroundColour;
-      background: $colour;
-    }
+  .page__title {
+    @include margin(2, 1);
+    @include padding(0, 0.5);
+    text-transform: uppercase;
+    font-size: $fontSizeLarge;
+    font-family: $fontStackSerif;
+    border-bottom: $border;
   }
 
   .page__content {
