--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -53,89 +53,89 @@
 
   .gallery__popup-artwork-info {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80vw;
-    height: 60vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     opacity: 0;
-    pointer-events: none;
+    cursor: pointer;
     display: flex;
-    align-items: flex-end;
-    background: $backgroundGradient;
+    justify-content: center;
+    align-items: center;
+    background: rgba(#111, 0.85);
+    transition: opacity 0.5s;
+    pointer-events: none;
+    z-index: 9999;
 
-    &.active {
-      opacity: 1;
-      pointer-events: all;
-    }
+    .popup-artwork-info__inner {
+      position: relative;
+      transition: transform 0.5s;
+      transform: scale(0.9);
 
-    .popup-artwork-info__image {
-      width: 60%;
-      height: 100%;
-      @include padding(4, 2);
-      background: $backgroundGradient;
-
-      .image {
+      .popup-artwork-info__image {
+        //@include padding(2, 2);
         width: 100%;
         height: 100%;
+        pointer-events: none;
+        display: flex;
+        background: black;
 
         img {
           width: 100%;
           height: 100%;
           object-fit: contain;
+          box-shadow: 5px 5px 20px rgba(black, 0.75);
+        }
+      }
+
+      .popup-artwork-info__details {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        @include padding(3, 2);
+        transform: translate(40%, 25%);
+        background: $backgroundColour;
+        cursor: default;
+        box-shadow: 5px 5px 20px rgba(black, 0.75);
+
+        .title {
+          font-size: $fontSizeHuge;
+          font-family: $fontStackSerif;
+        }
+
+        .subtitle {
+          text-transform: uppercase;
+          font-size: $fontSizeSmall;
+        }
+
+        .desc {
+          display: none;
+        }
+
+        .link {
+          text-transform: uppercase;
+          font-size: $fontSizeSmall;
+        }
+
+        .close {
+          position: absolute;
+          top: 0;
+          right: 0;
+          font-size: $fontSize;
+          text-transform: uppercase;
+          @include padding(0.5, 0);
+          cursor: pointer;
         }
       }
     }
 
-    .popup-artwork-info__details {
-      width: 40%;
-      height: 100%;
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      @include padding(2, 2)
-
-      .title {
-        font-size: $fontSizeHuge;
-        font-family: $fontStackSerif;
-      }
-
-      .subtitle {
-        text-transform: uppercase;
-        font-size: $fontSizeSmall;
-      }
-
-      .desc {}
-
-      .link {
-        text-transform: uppercase;
-        font-size: $fontSizeSmall;
-      }
-    }
-
-    .close {
-      position: absolute;
-      top: 0;
-      right: 0;
-      font-size: $fontSizeHuge;
-      @include padding(1, 0);
-      cursor: pointer;
-    }
-  }
-
-  .gallery__popup-gallery-controls {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: $backgroundColour;
-    opacity: 0;
-    pointer-events: none;
-
     &.active {
       opacity: 1;
       pointer-events: all;
+
+      .popup-artwork-info__inner {
+        transform: scale(1);
+      }
     }
   }
 
@@ -174,6 +174,86 @@
           }
         }
       }
+    }
+  }
+}
+
+@keyframes wiggle-x {
+  0% { transform: translateX(-20px) rotate(10deg); }
+  100% { transform: translateX(0px) rotate(-10deg); }
+}
+
+@keyframes wiggle-y {
+  0% { transform: translateY(-10px); }
+  100% { transform: translateY(0px); }
+}
+
+@keyframes wiggle-scale {
+  0% { transform: scale(0.9); }
+  100% { transform: scale(1); }
+}
+
+.gallery__popup-gallery-controls {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: $backgroundColour;
+  opacity: 0;
+  display: flex;
+  pointer-events: none;
+  cursor: pointer;
+  @include padding(0, 2);
+
+  .popup-gallery-controls__item {
+    width: 33.3333%;
+
+    .popup-gallery-controls__mouse,
+    .popup-gallery-controls__artwork,
+    .popup-gallery-controls__arrow {
+      display: flex;
+      justify-content: center;
+    }
+
+    .popup-gallery-controls__text {
+      @include padding(1, 1);
+      text-align: center;
+    }
+  }
+
+  .popup-gallery-controls__close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    @include padding(0.5, 0.25);
+  }
+
+  &.active {
+    opacity: 1;
+    pointer-events: all;
+
+    .popup-gallery-controls__item .popup-gallery-controls__mouse {
+      animation: wiggle-x;
+      animation-duration: 1.0s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      animation-timing-function: linear;
+    }
+
+    .popup-gallery-controls__item .popup-gallery-controls__arrow {
+      animation: wiggle-y;
+      animation-duration: 1.0s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      animation-timing-function: linear;
+    }
+
+    .popup-gallery-controls__item .popup-gallery-controls__artwork {
+      animation: wiggle-scale;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      animation-timing-function: linear;
     }
   }
 }
