--- a/scss/modules/logo.scss
+++ b/scss/modules/logo.scss
@@ -9,7 +9,7 @@
   z-index: $indexLogo;
   cursor: pointer;
   transition: transform $transitionMedium;
-  border: 2px solid $colourLink;
+
 
   &.active {
     transform: translateX(0);
@@ -17,6 +17,9 @@
 
   // NOTE: #canvas-logo-target
   .logo__inner {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,9 +27,7 @@
     align-items: center;
     pointer-events: none;
 
-    canvas {
-      //outline: $border;
-    }
+    canvas {}
   }
 
   .logo__prompt {
@@ -34,9 +35,7 @@
     @include padding(1, 1);
     font-family: $fontStackSerif;
     font-size: $fontSizeHuge;
-    //top: 50%; left: 50%; transform: translate(-50%, -50%);
-    bottom: 0; right: 0; transform: translate(66%, 45%);
-    //mix-blend-mode: difference;
+    bottom: 0; right: 0; transform: translate(64.5%, 6%);
 
     #open-gallery-artist {
       font-size: $fontSizeLarge;
