--- a/scss/utils/vars.scss
+++ b/scss/utils/vars.scss
@@ -4,7 +4,7 @@ $white: #fff;
 $colour: $black;
 $colourLink: #ff6f61; //#40c1ac;
 $backgroundColour: #eee; //#e8e5e4;
-$backgroundGradient: linear-gradient(to top, $white, $backgroundColour);
+$backgroundCustom: linear-gradient(to right, #ffefe1, $backgroundColour);
 
 // size
 $space: 8px;
