--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -1,11 +1,10 @@
 div, * {
 	box-sizing: border-box;
-	//outline: 1px dashed rgba(black, 0.25);
+	outline: 1px dashed rgba(black, 0.25);
 }
 
 html {
 	touch-action: manipulation;
-
 	&.freeze {
 		position: fixed;
 		overflow-y: scroll;
