--- a/scss/modules/index.scss
+++ b/scss/modules/index.scss
@@ -1,6 +1,7 @@
 @import 'global';
 @import 'loading-screen';
 @import 'nav';
+@import 'mobile-menu';
 @import 'wrapper';
 @import 'gallery';
 @import 'logo';
