--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -27,6 +27,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        user-select: none;
 
         canvas {
           position: absolute;
