--- a/scss/utils/vars.scss
+++ b/scss/utils/vars.scss
@@ -12,7 +12,8 @@ $heightNav: 40px;
 $heightFooter: 200px;
 $widthPage: 50%;
 $sizeLogo: 300px;
-$sizeMobileMenuButton: 65px;
+$widthMobileMenuButton: 65px;
+$heightMobileMenuButton: 60px;
 
 // style
 $border: 1px solid $black;
