--- a/scss/modules/mobile-menu.scss
+++ b/scss/modules/mobile-menu.scss
@@ -34,7 +34,7 @@
         text-transform: uppercase;
         border-bottom: $border;
         text-align: center;
-        font-size: $fontSizeLarge;
+        font-size: $fontSizeHuge;
 
 
         &.active {
