--- a/scss/utils/vars.scss
+++ b/scss/utils/vars.scss
@@ -24,6 +24,7 @@ $boxShadow: 5px 5px 0px black;
 $siteWidth: 1160px;
 $tablet: 1024px;
 $mobile: 768px;
+$mobileSmall: 450px;
 
 // height
 $indexLogo: 5;
