--- a/scss/modules/section.scss
+++ b/scss/modules/section.scss
@@ -99,28 +99,75 @@
   }
 
   @media screen and (max-width: $mobile) {
-    @include padding(2, 2.5);
-    @include margin(0, 2);
+    @include padding(8, 10);
+    @include margin(0, 0);
+
+    &:nth-child(1) {
+      padding-top: $space * 8;
+    }
+
+    .section__note {
+      text-align: center;
+    }
+
+    .section__heading {
+      text-align: center;
+      font-size: $fontSizeHugeMobile;
+      line-height: 1;
+    }
+
+    .section__title {
+      @include padding(0, 0.25);
+      margin-top: $space * 1.5;
+      text-align: center;
+      font-size: $fontSize;
+      line-height: 1;
+      text-decoration: none;
+      background: $black;
+      color: $white;
+    }
 
     .section__date {
-      padding-bottom: 0;
+      padding: 0;
+      font-size: $fontSizeMobile;
+      font-family: $fontStackSerif;
+      text-align: center;
+      padding-top: $space * 2;
     }
 
     .section__description, .section__description-short {
+      margin: 0;
       @include padding(0, 2);
+      font-size: $fontSizeMobile;
+      letter-spacing: 0.25px;
+      //line-height: 1;
       border-left: none;
-      border-top: $borderThick;
-      font-size: 85%;
 
       p {
         &:nth-child(1) {
           padding-top: 0;
+          margin-top: 0;
+        }
+
+        &:last-child {
+          padding-bottom: 0;
+          margin-bottom: 0;
         }
       }
     }
 
     .section__links {
       padding: 0;
+      margin: 0;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      font-family: $fontStackSerif;
     }
+  }
+
+  @media screen and (max-width: $mobileSmall) {
+    @include padding(2, 4);
+    @include margin(0, 0);
   }
 }
