--- a/scss/utils/type.scss
+++ b/scss/utils/type.scss
@@ -1,8 +1,11 @@
 $fontStack: 'Karla', sans-serif;
 $fontStackSerif: 'Playfair Display', sans-serif;
 $fontSize: 17px;
+$fontSizeMobile: 16px;
 $fontSizeSmall: 12px;
 $fontSizeLarge: 20px;
+$fontSizeLargeMobile: $fontSizeLarge * 1.1;
 $fontSizeHuge: 40px;
+$fontSizeHugeMobile: $fontSizeHuge * 1.25;
 $lineHeight: 1.2;
 $letterSpacing: 1.2px;
