--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -8,8 +8,9 @@ html {
 
 	&.freeze {
 		position: fixed;
-		overflow-y: scroll;
+		overflow: hidden;
     width: 100%;
+		height: 100%;
 		touch-action: none;
 	}
 }
