--- a/scss/modules/logo.scss
+++ b/scss/modules/logo.scss
@@ -17,19 +17,27 @@
     transform: translateX(0);
   }
 
-  // NOTE: #canvas-logo-target
   .logo__inner {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     pointer-events: none;
 
-    canvas {}
+    // NOTE: #canvas-logo-target
+    .logo__canvas-wrapper {
+      position: relative;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      canvas {
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: contain;
+      }
+    }
   }
 
   .logo__prompt {
