--- a/scss/modules/logo.scss
+++ b/scss/modules/logo.scss
@@ -33,6 +33,10 @@
       transform: translate(-50%, -50%);
 
       canvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 100% !important;
         height: 100% !important;
         object-fit: contain;
