--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -182,8 +182,6 @@
   }
 
   @media screen and (max-width: $mobile) {
-    //background: linear-gradient(to bottom, rgba($backgroundColour, 0.25), white);
-
     .gallery__controls {
       bottom: 12%;
     }
@@ -194,12 +192,12 @@
           position: absolute;
           bottom: 0;
           right: 0;
-          width: calc(100% - #{$space * 2});
           @include padding(2, 1.5);
-          transform: translate($space * 2, 80%);
+          transform-origin: bottom right;
+          transform: scale(0.65) translate($space * 2, $space * 2);
 
           .title {
-            font-size: $fontSizeHuge - 10px;
+            font-size: $fontSizeHuge - 14px;
           }
         }
       }
