--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -11,8 +11,13 @@ html {
 		overflow: hidden;
     width: 100%;
 		height: 100%;
-		overscroll-behavior: none;
-		//touch-action: none;
+		touch-action: none;
+		overscroll-behavior-y: none;
+
+		body {
+			overscroll-behavior-y: none;
+			touch-action: none;
+		}
 	}
 }
 
