--- a/scss/modules/logo.scss
+++ b/scss/modules/logo.scss
@@ -24,20 +24,14 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     // NOTE: #canvas-logo-target
     .logo__canvas-wrapper {
-      position: relative;
-
-      canvas {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100% !important;
-        height: 100% !important;
-        object-fit: contain;
-      }
+      //border: 1px solid blue;
+      canvas {}
     }
   }
 
@@ -104,6 +98,15 @@
     .logo__inner {
       position: relative;
       height: auto;
+
+      .logo__canvas-wrapper {
+        position: relative;
+
+        canvas {
+          width: 100% !important;
+          height: 100% !important;
+        }
+      }
     }
 
     .logo__prompt {
@@ -132,12 +135,6 @@
 
     &.hidden {
       display: none;
-    }
-
-    &.fix-safari {
-      &.safari {
-        height: 90vh;
-      }
     }
   }
 
